infrastructure/controllers/cilium/base/gateways/public/gateway-class-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-internal
spec:
  controllerName: traefik.io/gateway-controller/internal
  description: "gateway for the internal traffic & networking"
