infrastructure/controllers/cilium/base/gateways/public/public-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: kube-system
  labels:
    athanor.io/role: gateway
    athanor.io/network-zone: public
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              athanor.io/gateway-scope: "public"
    - name: websecure
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              athanor.io/gateway-scope: "public"

      tls:
        mode: Terminate
        certificateRefs:
          - name: athanor-wildcard-cert
